[gd_scene load_steps=3 format=3 uid="uid://6rc2mjibeujw"]

[ext_resource type="PackedScene" uid="uid://cq0bbpieyhdug" path="res://Core/UI/BasicSubWindow.tscn" id="1_fb5na"]
[ext_resource type="Script" path="res://Core/UI/SettingsWindow_General.gd" id="2_1jk3i"]

[node name="SettingsWindow_VMC" instance=ExtResource("1_fb5na")]
offset_right = 785.0
offset_bottom = 284.0
script = ExtResource("2_1jk3i")
label_text = "General Settings"

[node name="WindowTitlePanel" parent="." index="1"]
offset_right = 676.0

[node name="WindowTitle" parent="WindowTitlePanel" index="0"]
offset_right = 644.0
text = "Settings"

[node name="VBoxContainer" type="VBoxContainer" parent="." index="2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer" index="0"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
text = "There are no settings here at the moment! There used to be and there may be again, but for now there are not."
autowrap_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer" index="0"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 2
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" index="2"]
layout_mode = 2
alignment = 2

[node name="Button_Cancel" type="Button" parent="VBoxContainer/HBoxContainer" index="0"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Cancel"

[node name="Button_Apply" type="Button" parent="VBoxContainer/HBoxContainer" index="1"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Apply"

[node name="Button_OK" type="Button" parent="VBoxContainer/HBoxContainer" index="2"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "OK"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button_Cancel" to="." method="_on_button_cancel_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button_Apply" to="." method="_on_button_apply_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button_OK" to="." method="_on_button_ok_pressed"]
